# ProducerConsumer

./: CMakeLists.txt
headers/: consumer.h  datamanager.h  producer.h
sources/: main.cpp
